framec_tests/language_specific/typescript/v3_validator/positive/actions_without_frame.frm
@target typescript

system S {
    actions:
        do_it() {
            // native only
        }
    machine:
        $A {
            e() {
                // no Frame statements here either
            }
        }
}
