framec_tests/language_specific/typescript/v3_validator/negative/action_has_frame.frm
@target typescript

system S {
    actions:
        bad() {
            -> $B()
        }
}

